--- a/src/components/Charts/ChataChart/ChataChart.scss
+++ b/src/components/Charts/ChataChart/ChataChart.scss
@@ -1,5 +1,7 @@
 .chata-chart-container {
   position: relative;
+  height: 100%;
+  width: 100%;
 }
 
 /* These are not inline styles since they do not apply to saved PNG charts */
