use UMS for error handling upgrade to antd 4 on heroku page add unauthenticated error handling to messages in DM

--- a/src/components/ChatMessage/ChatMessage.scss
+++ b/src/components/ChatMessage/ChatMessage.scss
@@ -50,6 +50,7 @@
   background: var(--chata-drawer-background-color);
   color: var(--chata-drawer-text-color-primary);
   border: 1px solid #d3d3d352;
+  min-width: 100px;
 }
 .chat-single-message-container.request .chat-message-bubble {
   background: var(--chata-drawer-accent-color);
