--- a/examples/cra/src/index.css
+++ b/examples/cra/src/index.css
@@ -52,3 +52,11 @@ body {
 .ant-message {
   z-index: 99999;
 }
+
+.ant-form-item {
+  margin-bottom: 10px;
+}
+
+.ant-form-item input {
+  max-width: unset;
+}
