--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -218,6 +218,25 @@
     padding-left: 40px;
   }
 }
+.dashboard-tile-input.second.query {
+  transition: all 0.3s ease;
+  border: 1px solid transparent;
+  outline: none !important;
+  color: #356f90;
+  margin: 0px;
+  padding: 0px;
+  width: 0px;
+  height: 28px;
+  pointer-events: none;
+
+  &.open {
+    width: 200px;
+    padding: 12px;
+    margin-left: 5px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    pointer-events: unset;
+  }
+}
 .dashboard-tile-input-container .dashboard-tile-autocomplete-input {
   width: 100%;
   height: 100%;
@@ -226,9 +245,9 @@
 .dashboard-tile-input-container.query-focused .react-autosuggest__container {
   width: 80%;
 }
-.dashboard-tile-input-container .dashboard-tile-input:hover,
+.dashboard-tile-input:hover,
+.dashboard-tile-input:focus,
 .dashboard-tile-input-container .dashboard-tile-autocomplete-input:hover,
-.dashboard-tile-input-container .dashboard-tile-input:focus,
 .dashboard-tile-input-container .dashboard-tile-autocomplete-input:focus {
   border: 1px solid rgb(38, 167, 233) !important;
 }
