widget copy updates data messenger

--- a/src/components/QueryTipsTab/QueryTipsTab.scss
+++ b/src/components/QueryTipsTab/QueryTipsTab.scss
@@ -4,6 +4,10 @@
 
   .chat-bar-input-icon {
     top: 20px;
+    left: 26px;
+  }
+  .chata-chatbar-input.left-padding {
+    padding-left: 46px;
   }
 }
 .query-tips-result-container {
