--- a/src/components/ResponseRenderer/ResponseRenderer.scss
+++ b/src/components/ResponseRenderer/ResponseRenderer.scss
@@ -99,12 +99,13 @@
 .chata-safety-net-execute-btn:hover {
   border-color: #28a8e0;
 }
-.chata-execute-query-icon {
+.chata-execute-query-icon svg {
   height: 15px;
-  width: 24px;
-  margin-top: 3px;
+  width: 15px;
+  margin-top: 4px;
+  margin-right: 4px;
   vertical-align: top;
-  fill: #28a8e0;
+  fill: var(--chata-response-accent-color);
 }
 .chata-safetynet-select {
   position: relative;
