--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -101,7 +101,7 @@
   .layout-splitter {
     display: block;
     pointer-events: unset;
-    height: 4px;
+    height: 4px !important;
     color: var(--chata-dashboard-text-color-primary);
     opacity: 0.8;
   }
