--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -128,6 +128,14 @@
   height: 35px;
 }
 
+.topics-container {
+  margin: 5px 0;
+}
+.intro-qi-link {
+  cursor: pointer;
+  color: var(--chata-messenger-accent-color);
+}
+
 /* custom scrollbar */
 .chata-drawer .chat-message-container > div:last-child {
   opacity: 0;
