--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -12,16 +12,16 @@
   overflow: hidden;
 }
 
-.chata-suggestions-container {
-  margin-top: 5px;
-}
+// .chata-suggestions-container {
+//   margin-top: 5px;
+// }
 .chata-suggestion-btn {
   padding: 6px 14px;
   background: transparent;
-  border-radius: 8px;
+  border-radius: 4px;
   font-family: inherit;
   font-size: 12px;
-  margin-top: 5px;
+  margin-bottom: 5px;
   outline: none !important;
   cursor: pointer;
   letter-spacing: 0.05em;
