--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -333,6 +333,7 @@
 .page-switcher-container {
   box-shadow: -2px 0 8px rgba(0, 0, 0, 0.2);
   overflow: hidden;
+  box-sizing: border-box;
 
   .tab {
     position: relative;
