--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -216,20 +216,51 @@
   width: 100%;
   height: 100%;
 }
-.dashboard-tile-input-container .dashboard-tile-input,
-.dashboard-tile-input-container .dashboard-tile-autocomplete-input {
-  width: 0;
-  padding: 12px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  outline: none !important;
-  color: #356f90;
 
+.query-focused .dashboard-tile-left-input-container,
+.title-focused .dashboard-tile-right-input-container {
+  width: 70%;
+}
+
+.dashboard-tile-right-input-container {
+  z-index: 2;
+}
+
+.dashboard-tile-right-input-container,
+.dashboard-tile-left-input-container {
+  position: relative;
+  width: 0;
   flex-grow: 1;
   transition: width 0.3s ease;
 
-  &.left-padding {
-    padding-left: 40px;
+  .query-input-icon,
+  .title-input-icon {
+    position: absolute;
+    pointer-events: none;
+    opacity: 0.6;
+    z-index: 1;
   }
+
+  .query-input-icon {
+    top: 7px;
+    left: 6px;
+  }
+  .title-input-icon {
+    top: 7px;
+    left: 9px;
+  }
+}
+
+.dashboard-tile-input-container .dashboard-tile-input,
+.dashboard-tile-input-container .dashboard-tile-autocomplete-input {
+  width: 100%;
+  height: 100%;
+  padding: 12px;
+  padding-left: 30px;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  outline: none !important;
+  color: #356f90;
 }
 .dashboard-tile-input.second.query {
   transition: all 0.3s ease;
@@ -254,10 +285,10 @@
   width: 100%;
   height: 100%;
 }
-.dashboard-tile-input-container .dashboard-tile-input:focus,
-.dashboard-tile-input-container.query-focused .react-autosuggest__container {
-  width: 80%;
-}
+// .dashboard-tile-input-container .dashboard-tile-input:focus,
+// .dashboard-tile-input-container.query-focused .react-autosuggest__container {
+//   width: 80%;
+// }
 .dashboard-tile-input:hover,
 .dashboard-tile-input:focus,
 .dashboard-tile-input-container .dashboard-tile-autocomplete-input:hover,
@@ -276,19 +307,22 @@
   z-index: 2;
 }
 .dashboard-tile-input-container .dashboard-tile-input.title:hover,
-.dashboard-tile-input-container .dashboard-tile-input.title:focus {
+.dashboard-tile-input-container .dashboard-tile-input.title:focus,
+.title-focused .dashboard-tile-right-input-container .dashboard-tile-input,
+.dashboard-tile-right-input-container:hover .dashboard-tile-input {
   /* This is done to balance it because we add a 1px left border when the input is focused or hovered */
-  margin-left: -1px;
+  margin-left: -10px;
 }
 
 /* Autocomplete styles */
 .dashboard-tile-input-container .react-autosuggest__container {
   position: relative;
-  width: 0;
+  width: 100%;
+  height: 100%;
   padding: 0;
   margin: 0;
-  flex-grow: 1;
-  transition: width 0.3s ease;
+  // flex-grow: 1;
+  // transition: width 0.3s ease;
 }
 .dashboard-tile-input-container
   .react-autosuggest__suggestions-container--open {
