fix multiple scroll and style bugs add favicon and new title to app metadata

--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -161,16 +161,16 @@
   font-size: 22px;
 }
 .chata-drawer.drawer-right .drawer-handle {
-  left: -70px;
+  left: -70px !important;
 }
 .chata-drawer.drawer-left .drawer-handle {
-  right: -60px;
+  right: -60px !important;
 }
 .chata-drawer.drawer-top .drawer-handle {
-  bottom: -60px;
+  bottom: -60px !important;
 }
 .chata-drawer.drawer-bottom .drawer-handle {
-  top: -60px;
+  top: -60px !important;
 }
 .chata-drawer .drawer-handle.hide {
   opacity: 0;
