fix css from last commit

--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -39,7 +39,7 @@
   visibility: hidden;
   opacity: 0;
 }
-.chata-dashboard-tile-inner-div .split-view-btn {
+.chata-dashboard-tile-inner-div .split-view-btn .chata-icon {
   font-size: 14px;
 }
 .chata-dashboard-tile-inner-div:not(.split) .split-view-btn {
