improve charting performance improve margin updates so data doesnt get cut off add height limit to select component container put legend on side for lists larger than 3 make more legends interactive

--- a/src/components/Charts/Axis/Axis.scss
+++ b/src/components/Charts/Axis/Axis.scss
@@ -1,6 +1,7 @@
-g.legendOrdinal.interactive,
-g.legendOrdinal.interactive tspan {
+g.legendOrdinal,
+g.legendOrdinal tspan {
   stroke-width: 20px;
   stroke: transparent;
+  letter-spacing: 0;
   cursor: pointer;
 }
