fix chart png export

--- a/src/components/Charts/Axis/Axis.scss
+++ b/src/components/Charts/Axis/Axis.scss
@@ -17,3 +17,7 @@ g.legendOrdinal tspan {
     stroke: var(--chata-output-accent-color) !important;
   }
 }
+
+.chata-axis-selector-arrow {
+  opacity: 1;
+}
