big chart refactor

--- a/src/components/Cascader/Cascader.scss
+++ b/src/components/Cascader/Cascader.scss
@@ -60,7 +60,7 @@
 
       &:hover,
       &.active {
-        background-color: var(--chata-messenger-accent-color);
+        background-color: var(--chata-messenger-accent-color, #26a7df);
         color: #fff;
 
         .option-execute-icon {
