--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -8,12 +8,12 @@
   height: 34px;
   margin: 0 3px;
   padding: 0 11px;
-  color: var(--chata-messenger-accent-color);
+  color: var(--chata-messenger-accent-color, #26a7df);
   transition: all 0.2s ease;
   cursor: pointer;
 
   &:hover {
-    border-color: var(--chata-messenger-accent-color);
+    border-color: var(--chata-messenger-accent-color, #26a7df);
   }
 }
 
