--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -8,20 +8,15 @@
 }
 
 .chata-checkbox {
-  // --accent-color: #26a7df;
-  // --accent-color: var(--chata-messenger-accent-color) || #26a7df;
-
   display: flex;
   align-items: center;
   position: relative;
-  // margin: 0.5rem;
-  // height: 100%;
   cursor: pointer;
 
   .chata-checkbox--switch__input:checked,
   .chata-checkbox__input:checked {
-    border-color: var(--chata-output-accent-color);
-    background: var(--chata-output-accent-color);
+    border-color: var(--chata-output-accent-color, #26a7df);
+    background: var(--chata-output-accent-color, #26a7df);
   }
 }
 .chata-checkbox__label {
@@ -40,7 +35,8 @@
   -moz-appearance: none;
   outline: none;
   background: transparent;
-  border: 1px solid var(--chata-output-accent-color);
+  border: 1px solid;
+  border-color: var(--chata-messenger-accent-color, #26a7df);
   border-radius: 2px;
 
   cursor: pointer;
@@ -53,13 +49,12 @@
   bottom: 50%;
   left: 50%;
   transition: all 0.2s;
-  background: var(--chata-output-accent-color);
+  background: var(--chata-messenger-accent-color, #26a7df);
 }
 
 .chata-checkbox-tick {
   position: absolute;
   color: white;
-  top: 0px;
   left: 3px;
   line-height: 20px;
   pointer-events: none;
@@ -124,6 +119,8 @@
 .chata-checkbox--switch__input:checked::before {
   right: 2px;
   left: 18px;
+  top: 2px;
+  bottom: 2px;
 }
 
 .chata-checkbox-label {
