--- a/src/components/Notifications/Rule/Rule.scss
+++ b/src/components/Notifications/Rule/Rule.scss
@@ -46,13 +46,10 @@
     .chata-input-container {
       margin: 0;
     }
-    .chata-input-container .chata-input {
-      // padding-left: 48px;
-    }
     .chata-input-container:hover + .chata-rule-term-type-selector,
     .chata-input-container.focus + .chata-rule-term-type-selector {
-      color: var(--chata-messenger-accent-color);
-      border-color: var(--chata-messenger-accent-color);
+      color: var(--chata-messenger-accent-color, #26a7df);
+      border-color: var(--chata-messenger-accent-color, #26a7df);
     }
   }
 
@@ -72,8 +69,7 @@
     width: 40px;
 
     &:hover {
-      color: var(--chata-messenger-accent-color);
-      // border-color: var(--chata-messenger-accent-color);
+      color: var(--chata-messenger-accent-color, #26a7df);
     }
 
     svg {
