--- a/src/components/Steps/Steps.scss
+++ b/src/components/Steps/Steps.scss
@@ -11,10 +11,10 @@
   transition: all 0.5s ease;
 
   &.complete {
-    border-color: var(--chata-messenger-accent-color);
+    border-color: var(--chata-messenger-accent-color, #26a7df);
     .chata-step-dot {
-      border-color: var(--chata-messenger-accent-color);
-      background: var(--chata-messenger-accent-color);
+      border-color: var(--chata-messenger-accent-color, #26a7df);
+      background: var(--chata-messenger-accent-color, #26a7df);
     }
   }
 }
