add title to top of topics list

--- a/src/components/Cascader/Cascader.scss
+++ b/src/components/Cascader/Cascader.scss
@@ -29,6 +29,12 @@
       }
     }
 
+    .options-title {
+      padding: 4px;
+      padding-left: 10px;
+      font-weight: 600;
+    }
+
     .cascader-back-arrow {
       position: absolute;
       cursor: pointer;
